Closed
Bug 163746
Opened 23 years ago
Closed 23 years ago
cache block file patch horked support for partial cache entries [large image requests never load once interrupted]
Categories
(Core :: Networking: Cache, defect, P1)
Core
Networking: Cache
Tracking
()
VERIFIED
FIXED
mozilla1.2alpha
People
(Reporter: darin.moz, Assigned: darin.moz)
References
()
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
12.39 KB,
patch
|
darin.moz
:
review+
rpotts
:
superreview+
|
Details | Diff | Splinter Review |
cache block file patch horked support for partial cache entries [large image
requests never load once interrupted].
see:
http://unagi.mcom.com/~darinf/test2.html
stop the page load before the images load, and then press enter in the URL bar
after some of the images have started loading. notice that the images that had
previously started loading will never load.
there's an assertion in the nsDiskCacheStreams.cpp when trying to issue a byte
range request to complete the partial cache entry.
WARNING: data too large for buffer, file
/builds/trunk/mozilla/netwerk/cache/src/nsDiskCacheStreams.cpp, line 648
this error is not propogated correctly in the http code and we just end up never
being able to load the image.
| Assignee | ||
Comment 1•23 years ago
|
||
investigating...
| Assignee | ||
Comment 2•23 years ago
|
||
ok, so this is only a problem when the partial documents are forced to separate
disk files. that is, we must have downloaded more than 16k in order for this
bug to appear. but, that is the most common case i would imagine, since partial
loads usually correspond to large documents.
| Assignee | ||
Comment 3•23 years ago
|
||
this patch fixes the problem for me. it is more or less a work in progress,
however, becaues it also includes my fix for bug 163841.
| Assignee | ||
Updated•23 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.2alpha
Comment 5•23 years ago
|
||
Comment on attachment 96513 [details] [diff] [review]
v0 patch
r=dougt
Attachment #96513 -
Flags: review+
| Assignee | ||
Comment 6•23 years ago
|
||
the fix for bug 163841 landed on the trunk, so this patch is now smaller but
essentially unchanged :)
Attachment #96513 -
Attachment is obsolete: true
| Assignee | ||
Comment 7•23 years ago
|
||
Comment on attachment 97128 [details] [diff] [review]
v1 patch (merged with latest trunk)
carrying forward r=dougt
Attachment #97128 -
Flags: review+
Comment 8•23 years ago
|
||
Comment on attachment 97128 [details] [diff] [review]
v1 patch (merged with latest trunk)
sr=rpotts@netscape.com
Attachment #97128 -
Flags: superreview+
| Assignee | ||
Comment 9•23 years ago
|
||
waiting for gordon to review this now that he is back...
| Assignee | ||
Comment 10•23 years ago
|
||
fixed-on-trunk
with mozilla 1.2 alpha freezing this tuesday, i decided to go ahead and land
this patch now to ensure some bake time before mozilla 1.2 alpha and to avoid
the headache of trying to land this at the last minute. i'm still planning to
review these changes with gordon... we can of course always go back and tweak
these changes if necessary, but this patch has been tested and seems to fix the
regression.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 11•23 years ago
|
||
verified trunk - 2002092408 builds - winNT4, linux rh6, mac osX
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•