fixes bug 163746 "cache block file patch horked support for partial cache entries [large image requests never load once interrupted]" r=dougt sr=rpotts